[package]
name = "kairosdb"
version = "0.2.0"
authors = ["Kai Strempel <kstrempel@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kstrempel/rust-kairosdb"
documentation = "https://kstrempel.github.io/rust-kairosdb/kairosdb/index.html"
description = "Client for the KairosDB REST API"
readme = "README.md"
keywords = ["kairosdb", "timeseries", "database"]
build = "build.rs"

[lib]
name = "kairosdb"


[features]
default = ["serde_codegen"]
unstable = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
chrono="0.2"
hyper="^0.9"
log = "^0.3"
env_logger = "0.3.5"
serde = "0.8"
serde_derive = { version = "0.8", optional = true }
serde_json = "0.8"
