[package]
name = "kairosdb"
version = "0.2.9"
authors = ["Kai Strempel <kstrempel@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kstrempel/rust-kairosdb"
documentation = "https://kstrempel.github.io/rust-kairosdb/kairosdb/index.html"
description = "Client for the KairosDB REST API"
readme = "README.md"
keywords = ["kairosdb", "timeseries", "database"]
categories = ["database"]

[lib]
name = "kairosdb"

[dependencies]
chrono="0.4.6"
reqwest="0.9.6"
log = "0.4.6"
env_logger = "0.6.0"
serde = "1.0.84"
serde_derive = "1.0"
serde_json = "1.0.34"
