[package]
name = "kairosdb"
version = "0.2.20"
authors = ["Kai Strempel <kstrempel@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kstrempel/rust-kairosdb"
documentation = "https://kstrempel.github.io/rust-kairosdb/kairosdb/index.html"
description = "Client for the KairosDB REST API"
readme = "README.md"
keywords = ["kairosdb", "timeseries", "database"]
categories = ["database"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "kairosdb"

[dependencies]
chrono="0.4.10"
reqwest="0.9.6"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
